<resources>
    <string name="app_name">Diplomka</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edHintNumber"><font size="16">Номер
    </font></string>
    <string name="signIn">Войти</string>
    <string name="edPassword">Пароль</string>
    <string name="tv_ewe_ne_zareg">Еще не зарегистрированы?</string>
    <string name="registration">Регистрация</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="vosstanovit">Восстановить</string>
    <string name="or">или</string>
    <string name="restorePassword">Восстановить пароль</string>
    <string name="defaultNumber">+ 996 788 999 555</string>
    <string name="defaultDescription">Введите номер, указанный при регистрации. Вам будет отправлен код подтверждения</string>
    <string name="sendText">Отправить</string>
    <string name="default_mail">ibekboev@gmail.com</string>
    <string name="address">Адрес</string>
    <string name="back">back</string>
    <string name="profile">Профиль</string>
    <string name="content_description">content</string>
    <string name="profile_name">Izat Bekboev</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="apply">Применить</string>
    <string name="my_orders">Мои заказы</string>
    <string name="date_my_orders">Дата:</string>
    <string name="status_orders">Статус:</string>
    <string name="details_order">Детали заказа</string>
    <string name="detail_date_order">Дата заказа:</string>
    <string name="date_send">Дата отправки:</string>
</resources>