<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.my_account.ProfileFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sf16"
        android:backgroundTint="#DAD9D9"
        android:src="?attr/homeAsUpIndicator"
        android:contentDescription="@string/content_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sfuidisplaybold"
        android:text="@string/profile"
        android:textColor="@color/blackCap"
        android:textSize="@dimen/sf28" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="28dp"
        android:orientation="horizontal"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/view2"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:elevation="12dp"
            app:cardCornerRadius="40dp">

            <ImageView
                android:id="@+id/img_profile_avatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                android:contentDescription="@string/content_description" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/sfuidisplaybold"
            android:text="@string/profile_name"
            android:textColor="@color/blackCap"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_profile_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_mail"
        android:textSize="@dimen/sf20"
        android:textColor="@color/blackCap"
        android:drawablePadding="22dp"
        android:layout_marginTop="34dp"
        android:layout_marginStart="22dp"
        app:drawableStartCompat="@drawable/ic_massage" />

    <TextView
        android:id="@+id/tv_profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultNumber"
        android:textSize="@dimen/sf20"
        android:textColor="@color/blackCap"
        android:drawablePadding="26dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="22dp"
        app:drawableStartCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/tv_profile_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="@dimen/sf20"
        android:textColor="@color/blackCap"
        android:drawablePadding="26dp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="22dp"
        app:drawableStartCompat="@drawable/ic_location" />

    <Button
        android:id="@+id/btn_profile_edit"
        android:layout_width="318dp"
        android:layout_height="56dp"
        style="@style/ButtonStyle"
        android:layout_marginTop="124dp"
        android:layout_gravity="center"
        android:text="@string/profile_edit"
        android:textColor="@color/whiteCap"
        android:textSize="@dimen/sf16"/>
</LinearLayout>