<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.RestorePasswordFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_cap"
        android:layout_width="84dp"
        android:layout_height="66dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_restore_password"
        android:layout_width="315dp"
        android:layout_height="32dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/sfuidisplaybold"
        android:text="@string/restorePassword"
        android:textColor="@color/blackCap"
        android:textSize="@dimen/sf28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_cap" />

    <EditText
        android:id="@+id/et_restore_password"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:hint="@string/defaultNumber"
        android:inputType="phone"
        android:textColorHint="#4D12121D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_restore_password"
        tools:ignore="Autofill,TextFields" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="315dp"
        android:layout_height="50dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/sfuitextbold"
        android:text="@string/defaultDescription"
        android:textColor="@color/blackCap"
        android:textSize="@dimen/sf14"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_restore_password" />

    <Button
        android:id="@+id/btn_send"
        style="@style/ButtonStyle"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginBottom="68dp"
        android:text="@string/sendText"
        android:textSize="@dimen/sf16"
        android:textColor="@color/whiteCap"
        android:fontFamily="@font/sfuitextbold"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>