<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignInFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/icon_cap"
        android:layout_width="84dp"
        android:layout_height="66dp"
        android:layout_marginTop="26dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_voiti"
        android:layout_width="316dp"
        android:layout_height="32dp"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/sfuidisplaybold"
        android:text="@string/signIn"
        android:textColor="@color/blackCap"
        android:textSize="@dimen/sf28"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_cap" />

    <View
        android:id="@+id/view_poloska"
        android:layout_width="315dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="40dp"
        android:background="#4D12121D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_voiti" />

    <EditText
        android:id="@+id/et_phone_sign_in"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:drawableStart="@drawable/ic_phone_black"
        android:drawablePadding="22dp"
        android:fontFamily="@font/sfuitextbold"
        android:hint="@string/edHintNumber"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:textColorHint="@color/blackCap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_poloska" />

    <EditText
        android:id="@+id/et_password_sign_in"
        android:layout_width="315dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="22dp"
        android:fontFamily="@font/sfuitextbold"
        android:hint="@string/edPassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="#4D12121D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone_sign_in" />

    <TextView
        android:id="@+id/tv_ewe_ne_zareg"
        android:layout_width="190dp"
        android:layout_height="18dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="22dp"
        android:text="@string/tv_ewe_ne_zareg"
        android:textColor="@color/blackCap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_sign_in" />

    <TextView
        android:id="@+id/tv_registration_sign_in"
        android:layout_width="88dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="22dp"
        android:text="@string/registration"
        android:textColor="#2566AF"
        app:layout_constraintStart_toEndOf="@id/tv_ewe_ne_zareg"
        app:layout_constraintTop_toBottomOf="@id/et_password_sign_in" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="112dp"
        android:layout_height="18dp"
        android:layout_marginStart="54dp"
        android:layout_marginTop="22dp"
        android:text="@string/forget_password"
        android:textColor="@color/blackCap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_ewe_ne_zareg" />

    <TextView
        android:id="@+id/tv_recovery"
        android:layout_width="96dp"
        android:layout_height="18dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="22dp"
        android:text="@string/vosstanovit"
        android:textColor="#2566AF"
        app:layout_constraintStart_toEndOf="@id/tv_forget_password"
        app:layout_constraintTop_toBottomOf="@id/tv_registration_sign_in" />

    <androidx.cardview.widget.CardView
        android:id="@+id/register_btnCard"
        android:layout_width="220dp"
        android:layout_height="56dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_recovery">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signIn_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/whiteCap"
            android:text="@string/signIn"
            style="@style/ButtonStyle"
            android:textAllCaps="false"
            android:textColor="#4D12121D"
            android:textStyle="normal" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/lines_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btnCard">


        <View
            android:id="@+id/view2"
            android:layout_width="118dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="38dp"
            android:background="#4D000000" />

        <TextView
            android:id="@+id/or_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="26dp"
            android:text="@string/or"
            android:textColor="@color/blackCap"
            android:textSize="16sp" />

        <View
            android:id="@+id/view3"
            android:layout_width="118dp"
            android:layout_height="0.5dp"
            android:layout_marginTop="38dp"
            android:background="#4D000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lines_cont">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/faceBook_btn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_facebook" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/google_btn"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_google" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>