<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.my_account.DetailsOrderFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_details_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sf16"
        android:backgroundTint="#DAD9D9"
        android:src="?attr/homeAsUpIndicator"
        android:contentDescription="@string/content_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/sfuidisplaybold"
        android:text="@string/details_order"
        android:textColor="@color/blackCap"
        android:textSize="@dimen/sf28" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cd_details"
            android:layout_width="88dp"
            android:layout_height="88dp"
            android:backgroundTint="@color/grayCap"
            app:cardCornerRadius="12dp"
            android:layout_marginTop="44dp"
            android:layout_marginStart="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="67dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                tools:src="@drawable/black_snapback_scenes"
                android:contentDescription="@string/content_description" />

        </androidx.cardview.widget.CardView>
        
        <TextView
            android:id="@+id/tv_detail_name_order"
            android:layout_width="158dp"
            android:layout_height="52dp"
            tools:text="New Era
Golden State Warriors Icon 59FIFTY Fitted Cap"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/cd_details"
            android:layout_marginTop="44dp"
            android:textColor="@color/blackCap"
            android:textSize="@dimen/sf12"
            android:layout_marginStart="12dp"
            tools:ignore="SpUsage" />

        <TextView
            android:id="@+id/tv_detail_price_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name_order"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2500 сом"
            android:textColor="@color/yellowCap"
            android:textSize="@dimen/sf14"
            android:fontFamily="@font/sfuidisplaybold"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="18dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="44dp"
    android:layout_marginHorizontal="20dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="194dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="26dp"
        android:backgroundTint="@color/grayCap"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tv_id_details_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="89475934"
            android:textSize="@dimen/sf14"
            android:textColor="@color/blackCap"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/sfuidisplaybold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tv_details_date"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/detail_date_order"
            android:textColor="@color/blackCap"
            android:textSize="@dimen/sf14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="52dp"
            android:layout_marginStart="22dp"/>

        <TextView
            android:id="@+id/tv_details_date_orders"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="03.06.2021"
            android:textColor="@color/blackCap"
            android:textSize="@dimen/sf14"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/sfuidisplaybold"/>

        <TextView
            android:id="@+id/tv_details_date_send"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:text="@string/date_send"
            android:textColor="@color/blackCap"
            android:textSize="@dimen/sf14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_details_date"
            android:layout_marginStart="22dp"/>

        <TextView
            android:id="@+id/tv_details_date_send_orders"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_details_date_orders"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="03.06.2021"
            android:textColor="@color/blackCap"
            android:textSize="@dimen/sf14"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/sfuidisplaybold"/>

        <TextView
            android:id="@+id/tv_detail_address"
            android:layout_width="48dp"
            android:layout_height="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/address"
            android:textColor="@color/blackCap"
            android:textSize="@dimen/sf14"
            android:layout_marginBottom="45dp"
            android:layout_marginStart="22dp"/>

        <TextView
            android:id="@+id/tv_address_delivery"
            android:layout_width="90dp"
            android:layout_height="56dp"
            tools:text="г. Бишкек 8 мкрн, дом 12
                         кв 47"
            android:textSize="@dimen/sf14"
            android:textColor="@color/blackCap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="end"
            android:layout_marginEnd="10dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>